[gd_scene load_steps=2 format=3 uid="uid://c6qluradfjbod"]

[ext_resource type="Script" uid="uid://bgk130s3nkhap" path="res://scripts/dash.gd" id="1_46j17"]

[node name="Dash" type="Node2D"]
script = ExtResource("1_46j17")

[node name="dashTimer" type="Timer" parent="."]
wait_time = 0.265
one_shot = true

[node name="dashAnimationTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="dashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dashAnimationTimer" to="." method="_on_dash_animation_timer_timeout"]
